add mobile title

--- a/resume.html
+++ b/resume.html
@@ -460,7 +460,7 @@ div.content-text.skills-listing > ul > li:first-child {
               <p>
                 Nathan Stier
               </p>
-              <p class="subtitle">Xamarin Developer</p>
+              <p class="subtitle">Xamarin Mobile Developer</p>
             </div>
           </div>
         </header>
